2006.10.04: David Nichols
	* added internal q_dirname() function to QoreLib.h returning a string
	  that must be free()'ed

2006.10.03: David Nichols
	* improved GetOpt class date parsing to accept ISO-8601 and qore date/
	  time specifications (i.e. 2006-01-01 or 2006-01-01T10:00:00, etc) as
	  well as the old format (20060101, 20060101100000)
	* renamed include/qore/thread.h to include/qore/qore_thread.h to avoid
	  conflicts with system include files
	* more Solaris compile fixes
	* Solaris shared object link fixes

2006.10.02: David Nichols
	* fixed modules/TIBCO/Makefile.am to include flags for pthread
	* fixed --without-tuxedo logic in configure.ac
	* added forgotten destructor in safe_dslist template
	* fixed a bug in the Datasource copy constructor

2006.10.01: David Nichols
	* corrected the atomicity of module initialization
	* reviewed use of new STL containers for thread-concurrency problems
	* removed GlobalVariableList lock and ensured that all reads and 
	  writes take place under the parse lock on the containing program 
	  object
	* ensured that all run-time accesses to the UserFunctionList map under
	  QoreProgram objects takes place in the parse lock
	* write templated safe_dslist for a singly-linked list with constant-
	  time inserts at the beginning and end
	* updated all Makefile.am files in SVN so that profiling will be enabled 
	  even if --enable-debug is also chosen in configure
	* fixed some bugs in the Datasource class introduced in 0.5.2 where a 
	  timeout grabbing the transaction lock would cause a deadlock on future
	  operations on the datasource (with some Datasource methods)
	* separated the qore Datasource class into a DatasourceBase clas and a
	  Datasource class
	* fixed a bug in the SingleExitGate class where a timeout would cause a
	  deadlock the next time ::enter() was called (also affected the 
	  Datasource class)
	* updated examples/db-test.q to test datasource lock timeouts

2006.09.30: David Nichols