@@ -1,6 +1,8 @@
 2006.10.04: David Nichols
 	* added internal q_dirname() function to QoreLib.h returning a string
 	  that must be free()'ed
+	* changed ModuleManager to ignore QORE_AUTO_MODULE_DIR and 
+	  QORE_MODULE_DIR if directories were added in advance
 
 2006.10.03: David Nichols
 	* improved GetOpt class date parsing to accept ISO-8601 and qore date/
